# goblin

./: .gitignore  ARCHITECTURE.md  Cargo.toml  TODO.md  package-lock.json  package.json  playwright.config.ts  sample.html  vite.config.ts  vitest.config.ts
.goblin/: EVE-GIDINCE-BAKILACAK.md  session-state.md
cli/: Cargo.toml
cli/src/: agent.rs  config.rs  context.rs  main.rs  tools.rs
crates/api/: Cargo.toml
crates/api/src/: anthropic.rs  autotune.rs  failover.rs  lib.rs  openai.rs  provider.rs  sse.rs  subprocess.rs  tests.rs  types.rs  vision_fallback.rs
crates/cli/: Cargo.toml
crates/cli/src/: agent_spawner.rs  config.rs  ctx.rs  dashboard.rs  deploy.rs  ide.rs  init.rs  main.rs  main.rs.bak.20260427-pre-oneshot-renderer-parity  main.rs.bak.20260506-pre-dragon-banner  markdown.rs  mcp_cmd.rs  path_input.rs  pr.rs  projects.rs  recall.rs  repl.rs  router.rs  status_line.rs  system_prompt.full.md  system_prompt.md  tasks.rs  templates.rs  tui.rs
crates/cli/src/repl/: builder.rs  builder.rs.bak.20260427-pre-renderer-parity  command.rs  dag.rs  format.rs  format.rs.bak.20260427-pre-renderer-parity  helper.rs  overlay.rs  read_line_usages.json  search.rs  spinner.rs  tests.rs
crates/cli/src/repl/.metis/blobs_index/: .managed.json  meta.json
crates/core/: Cargo.toml
crates/core/examples/: ctx_demo.rs  permission_preview.rs
crates/core/src/: agent.rs  autonomous_security.rs  bash_safety.rs  blob_index.rs  blob_store.rs  compaction.rs  context_primer.rs  cost.rs  cron.rs  display.rs  execution.rs  feature_permission.rs  features.rs  guardrail.rs  halluguard.rs  hooks.rs  lang_hints.rs  learning.rs  lib.rs  mcp_cache.rs  memory.rs  permission.rs  policy.rs  prompt_mod.rs  repomap.rs  sandbox_exec.rs  search.rs  session.rs  skills.rs  subagent.rs  telemetry.rs  update.rs  wasi_sandbox.rs
crates/core/src/tools/: agent.rs  bash.rs  cluster.rs  code.rs  cron.rs  fs.rs  fs.rs.bak.20260427-pre-renderer-parity  mcp.rs  memory.rs  mod.rs  monitor.rs  notebook.rs  plan.rs  prompt_mod.rs  python_wasi.rs  semantic_memory_search.rs  system.rs  task.rs  wasm.rs  web.rs  worktree.rs
crates/core/tests/: agent_loop.rs  benchmark.rs  failure_driven.rs
crates/features/multi_model/: Cargo.toml
crates/features/multi_model/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp-obsidian/: Cargo.toml
crates/mcp-obsidian/src/: main.rs
crates/mcp/src/: lib.rs
e2e/: app.spec.ts  smoke.spec.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: daemon.rs  headless.rs  lib.rs  main.rs  task.rs
src-tauri/src/agent/: context.rs  loop.rs  mod.rs  prompt.rs  soul.rs
src-tauri/src/channel/: mod.rs  telegram.rs  webhook.rs
src-tauri/src/config/: mod.rs
src-tauri/src/cron/: mod.rs
src-tauri/src/http/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/memory/: compact.rs  db.rs  embed.rs  inject.rs  mod.rs  observe.rs  reinforcement.rs
src-tauri/src/mnemonics/: mod.rs
src-tauri/src/plugin/: mod.rs
src-tauri/src/provider/: anthropic.rs  gemini.rs  glm.rs  mod.rs  nvidia.rs  openai.rs
src-tauri/src/session/: mod.rs  search.rs  store.rs
src-tauri/src/tools/: approval.rs  browser.rs  compactor.rs  file_ops.rs  git.rs  mcp.rs  mcp_server.rs  media.rs  meta.rs  mod.rs  peer.rs  sandbox.rs  search.rs  shell.rs  skills.rs  vault.rs  web.rs
src-tauri/src/whatsapp/: db.rs  mod.rs
src-tauri/whatsapp-bridge/: .gitignore  index.js  package-lock.json  package.json
src/__tests__/: agent-loop.e2e.test.ts  approval.test.ts  memory.test.ts  pure-functions.test.ts  sessionStore.test.ts  stores.test.ts
src/character/: AnimationDirector.ts  BehaviorOrchestrator.ts  CognitiveEngine.ts  EmotionalEngine.ts  EventBus.ts  LLMInterpreter.ts  PresenceSystem.ts  SignalIngestion.ts  index.ts  types.ts
src/components/: ApprovalModal.tsx  ChatPanel.tsx  CommandPalette.tsx  ConfigPanel.tsx  ErrorBoundary.tsx  Goblin3D.tsx  GoblinCharacter.tsx  GoblinLive.tsx  InputBar.tsx  MemoryPanel.tsx  OutputPanel.tsx  ProjectPicker.tsx  RightTabs.tsx  SessionPicker.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  WhatsappPanel.tsx
src/hooks/: useAgent.ts  useGoblinState.ts
src/stores/: agentStore.ts  characterStore.ts  chatStore.ts  memoryStore.ts  projectStore.ts  sessionStore.ts  tabsStore.ts
src/styles/: app.css  global.css
src/test/mocks/: tauri.ts
src/types/: index.ts
vscode-extension/: package.json
vscode-extension/media/: main.js  style.css
vscode-extension/src/: GoblinViewProvider.ts  extension.ts
