[package]
name = "goblin-cli"
version = "0.1.0"
edition = "2021"
description = "Terminal CLI for Goblin AI"

[[bin]]
name = "goblin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
