[package]
name = "goblin-cli"
version = "0.2.0"
edition = "2021"
description = "Standalone terminal CLI for Goblin AI — no app required"

[[bin]]
name = "goblin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
glob = "0.3"
regex = "1"
