[package]
name = "goblin-app"
version = "0.1.0"
description = "Goblin - Desktop AI Agent"
authors = ["goblin"]
edition = "2021"

[lib]
name = "goblin_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
glob = "0.3"
urlencoding = "2"
base64 = "0.22"
headless_chrome = "1"
