[package]
name = "aegis-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP client and provider types for aegis."
keywords = ["agent", "llm", "ai", "cli", "openai"]
categories = ["command-line-utilities", "api-bindings"]
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true
async-trait.workspace = true
