[package]
name = "aegis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tools, agent loop, session, and cost meter for aegis."
keywords = ["agent", "llm", "ai", "cli", "tools"]
categories = ["command-line-utilities", "development-tools"]
rust-version.workspace = true

[dependencies]
aegis-api = { path = "../api", version = "0.9.0" }
aegis-mcp = { path = "../mcp", version = "0.9.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
walkdir.workspace = true
regex.workspace = true
glob.workspace = true
reqwest.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
toml.workspace = true
dirs.workspace = true
pdf-extract.workspace = true
base64.workspace = true
libc.workspace = true
urlencoding = "2"
flate2.workspace = true
tar.workspace = true
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
regorus = { workspace = true, optional = true }
tantivy = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

[features]
default = ["ctx"]
# Enable WASI sandbox (wasmtime-based, ~5-10min cold build, ~50MB binary growth)
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
# Enable Rego policy gate (regorus, pure Rust)
policy = ["dep:regorus"]
# Enable context blob store + FTS index (tantivy + blake3 + zstd, ~5MB binary growth)
ctx = ["dep:tantivy", "dep:blake3", "dep:zstd"]

[dev-dependencies]
tempfile = "3"
wat = { workspace = true }
