[package]
name = "aegis-mcp-obsidian"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP server for Obsidian vaults — search, read, write, link navigation."
rust-version.workspace = true

[[bin]]
name = "mcp-obsidian"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
