[package]
name = "aegis-multi-model"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["nakata"]
repository = "https://github.com/nakata-app/aegis-cli"
description = "Safe multi-model evaluation for Metis"
rust-version = "1.78"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rand = "0.8"
dirs = "5"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
thiserror = "1"

# Optional API clients (feature-gated)
# openai = { version = "0.3", optional = true }
# anthropic = { version = "0.0.8", optional = true }

[features]
default = []
# full = ["openai", "anthropic"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"